--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build 
+        env:
+          TURBO_TOKEN: GdMUvnTLnzuzaCqvQZEBTJQH
+          TURBO_TEAM: guilhermes-projects-aeee055a
 
       - name: Deploy storybook
         working-directory: ./packages/docs
