--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   ],
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=@guilherme-ignite-design-system/docs && changeset publish"
   },
   "packageManager": "npm@10.5.0",
   "devDependencies": {
+    "@changesets/cli": "^2.28.1",
     "turbo": "^2.4.4"
   }
 }
