--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "turbo run build",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=@guilherme-ignite-design-system/docs && changeset publish"
+    "release": "turbo run build --filter=!docs && changeset publish"
   },
   "packageManager": "npm@10.5.0",
   "devDependencies": {
