--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,6 +27,8 @@
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@stitches/react": "^1.2.8"
   }
 }
